--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,61 @@
-.App {
-  text-align: center;
+img {
+  width: 100%;
+
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.landing {
+  position: relative;
+
+  background-size: cover;
+  background-position: center;
+  height: 25rem;
+  margin-top: -24px;
+  margin-bottom: 80rem;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.landing-inner {
+  padding-top: 80px;
 }
 
-.App-link {
-  color: #61dafb;
+.dark-overlay {
+
+
+
+background-color: rgba(23,162,184,1);
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card-form {
+  opacity: 0.9;
+}
+
+.latest-profiles-img {
+  width: 40px;
+  height: 40px;
+}
+
+.form-control::placeholder {
+  color: #bbb !important;
+}
+
+
+.featurette-divider {
+
+  background: rgba(255, 51 ,0, 1);
+  height: 0.1;
+  margin: 40
+}
+
+/* Thin out the marketing headings */
+.featurette-heading {
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: -.05rem;
 }
